test/simple/ill-typed/let_int.caprice
(* TEST
  include refute;
*)


let x : int = true
